<resources>
    <string name="app_name">LinHomes</string>
    <string name="app_name_upper">LINHOMES</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="inbox_string">Inbox</string>
    <string name="sent_mail_string">Sent mail</string>
    <string name="draft_string">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="trash_string">Trash</string>
    <string name="all_mail_string">All mails</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string name="apply">Áp dụng</string>
    <string name="connecting_to">Kết nối tới</string>
    <string name="scan_device">Tìm thiết bị</string>
    <string name="scanning">Đang tìm...</string>
    <string name="processing">Đang thực hiện...</string>
    <string name="connecting">Đang kết nối...</string>
    <string name="device_name">Tên thiết bị</string>
    <string name="device_ssid">Tên Wifi (SSID)</string>
    <string name="device_pw">Mật khẩu</string>
    <string name="control_status">Trạng thái</string>
    <string name="error_input">Chưa nhập đủ thông tin</string>
    <string name="error_processing">Xảy ra lỗi</string>
    <string name="device_never_connected">Thiết bị chưa kết nối được Wifi</string>
    <string name="device_connected_yet">Chưa kết nối được với thiết bị</string>
    <string name="device_setting">Thiết bị đang kết nối Wifi</string>
    <string name="app_connecting">Ứng dụng đang kết nối Wifi</string>
    <string name="cannot_connect_device">Chưa kết nối được. Hãy kiểm tra đèn trên thiết bị</string>
    <string name="not_found_device">Chưa có thiết bị nào</string>
    <string name="updated">Đã cập nhật</string>
    <string name="device_connected_wifi_yet">Thiết bị chưa kết nối tới Wifi</string>
    <string name="turn_on_wifi">Đã bật Wifi</string>

    <string name="phone">SĐT</string>
    <string name="full_name">Họ tên</string>
    <string name="password">Mật khẩu</string>
    <string name="re_password">Xác nhận mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="logout">Đăng xuất</string>
    <string name="no_acc_yet">Đăng ký tài khoản</string>
    <string name="required">Bắt buộc nhập</string>
    <string name="already_acc">Đã có. Quay lại Đăng nhập</string>
    <string name="create">Tạo</string>
    <string name="create_acc">Tạo tài khoản</string>
    <string name="re_pw_wrong">Xác nhận MK chưa đúng</string>

    <string name="plug">Điều khiển</string>
    <string name="fan">Quạt máy</string>
    <string name="security">An ninh</string>
    <string name="weather">Thời tiết</string>
    <string name="media">Giải trí</string>
    <string name="control">Điều khiển</string>
    <string name="health">Sức khỏe</string>
    <string name="setting">Cài đặt</string>
    <string name="tree">Cây cảnh</string>
    <string name="other">Xem thêm</string>
    <string name="account">Tài khoản</string>
    <string name="fully">Tất cả</string>
    <string name="on">Bật</string>
    <string name="off">Tắt</string>
    <string name="main_screen">Màn hình chính</string>
    <string name="full_services">Tất cả dịch vụ</string>
    <string name="no_device">0 thiết bị</string>
</resources>
