<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_main"
            android:checked="false"
            android:icon="@drawable/home24"
            android:title="@string/main_screen" />

        <item
            android:id="@+id/nav_security"
            android:checked="false"
            android:icon="@drawable/cctv24"
            android:title="@string/security" />

        <item
            android:id="@+id/nav_weather"
            android:checked="false"
            android:icon="@drawable/thermometer24"
            android:title="@string/weather" />

        <item
            android:id="@+id/nav_media"
            android:checked="false"
            android:icon="@drawable/monitor24"
            android:title="@string/media" />

        <item
            android:id="@+id/nav_control"
            android:checked="false"
            android:icon="@drawable/plug24"
            android:title="@string/control" />

        <item
            android:id="@+id/nav_health"
            android:checked="false"
            android:icon="@drawable/health24"
            android:title="@string/health" />

        <item
            android:id="@+id/nav_tree"
            android:checked="false"
            android:icon="@drawable/wateringcan24"
            android:title="@string/tree" />

        <item
            android:id="@+id/nav_setting"
            android:checked="false"
            android:icon="@drawable/logout24"
            android:title="@string/logout" />

    </group>
</menu>