<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_name"/>

    <EditText
        android:layout_margin="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/device_name"
        android:id="@+id/custom_name"/>

    <TextView
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_ssid"/>
    <Spinner
        style="@style/spinner_style"
        android:layout_margin="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_ssid"
        android:hint="@string/device_ssid"/>

    <TextView
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_pw"/>
    <EditText
        android:layout_margin="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/device_pw"
        android:id="@+id/custom_pw"/>

    <Button
        android:layout_marginEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/apply"
        android:id="@+id/btnSetupApply"/>
</LinearLayout>